--- a/sobreNos.html
+++ b/sobreNos.html
@@ -30,7 +30,8 @@
 
     <section class="sectionSobreNos">
 
-        <div class="textoSobreNos"><p>
+        <div class="textoSobreNos">
+            <p class="textoPgHomeSobreNos">
             Bem-vindo ao emocionante mundo dos carros esportivos, onde a paixão pela velocidade e pela excelência automotiva se encontram. Aqui no nosso site, estamos dedicados a trazer a você as últimas novidades, análises detalhadas e informações exclusivas sobre os mais incríveis carros esportivos do mundo.
      
             <br>
