--- a/home.html
+++ b/home.html
@@ -15,11 +15,13 @@
         <div class="listaMenu1">
             <ul>
                 <li><a href="home.html">Home</a></li>
-                <li><a href="sobreNos.html">Sobre-nós</a></li>
+                <li><a href="sobreNos.html">Sobre</a></li>
             </ul>
         </div>
 
-        <div class="logoMenuImg"></div>
+        <div class="logoMenuImg">
+          <img src="tourologoevy.png" class="imgTouro">
+        </div>
 
         <div class="listaMenu2">
             <ul>
