--- a/home.html
+++ b/home.html
@@ -26,7 +26,14 @@
 
         <div class="listaMenu2">
             <ul>
-                <li><a href="modelos.html">Modelos</a></li>
+                <li><a href="modelos.html">Modelos</a>
+                  <ul class="subMenu">
+                    <li><a href="#">Aventador</a></li>
+                    <li><a href="#">Revuelto</a></li>
+                    <li><a href="#">Huracan</a></li>
+                  </ul>
+                </li>
+
                 <li><a href="contato.html">Contato</a></li>
             </ul>
         </div>
