--- a/home.html
+++ b/home.html
@@ -111,7 +111,11 @@
     <footer>
         <div class="adm"><span style="color: #E1AB32; ">Desenvolvido por:</span> Evellyn</div>
 
-        <div class="redesSociais">redes socias</div>
+        <div class="redesSociais">
+          <img src="instabranco.png">
+          <img src="twitterbranco.png">
+          <img src="facebranco.png">
+        </div>
 
     </footer>
 
