--- a/home.html
+++ b/home.html
@@ -112,9 +112,9 @@
         <div class="adm"><span style="color: #E1AB32; ">Desenvolvido por:</span> Evellyn</div>
 
         <div class="redesSociais">
-          <img src="instabranco.png">
-          <img src="twitterbranco.png">
-          <img src="facebranco.png">
+          <img src="instabranco.png" class="insta">
+          <img src="twitterbranco.png" class="twitter">
+          <img src="facebranco.png" class="face">
         </div>
 
     </footer>
