--- a/submenuREVUELTO.html
+++ b/submenuREVUELTO.html
@@ -10,7 +10,7 @@
     <link rel = "stylesheet" href = "styleGeral.css">
     <link rel = "stylesheet" href = "submenuREVUELTO.css">
 </head>
-<body class="bodySobreNos">
+<body class="bodyRevuelto">
     <header>
         <div class="listaMenu1">
             <ul>
@@ -76,17 +76,45 @@
         
     </section>
 
-    <section class="sectionRevuelto2">
+    <section class="sectionBack">
+      <div class="textoRevuelto">
+        <p class="textoPgRevuelto">
+          A Lamborghini Revuelto é uma obra-prima de engenharia automotiva que combina desempenho extremo com design inovador. Este supercarro foi meticulosamente projetado para oferecer uma experiência de condução incomparável, elevando o conceito de luxo e velocidade a novos patamares.
+          <br><br>
+
+          Sob o capô, um motor V12 de última geração proporciona uma potência impressionante, capaz de acelerar de 0 a 100 km/h em questão de segundos. Cada detalhe aerodinâmico da Revuelto foi refinado para otimizar a estabilidade em altas velocidades, garantindo uma condução suave e precisa, mesmo nas curvas mais desafiadoras.
+        </p>
+
+      </div>
+    </section>
+
+    <section class="sectionBack2">
+      <div class="textoRevuelto2">
+        <p class="textoPgRevuelto2">
+          O interior é um verdadeiro exemplo de sofisticação italiana, com acabamentos em couro de alta qualidade, painel de instrumentos digital totalmente personalizável e tecnologia de ponta que mantém o condutor conectado e informado durante toda a jornada. Cada elemento da cabine foi projetado para proporcionar conforto supremo e uma experiência de condução envolvente.
+          <br><br>
+
+          Além disso, a Lamborghini Revuelto não apenas impressiona pela performance, mas também pelo seu design exterior arrojado e distintivo. Suas linhas fluidas e agressivas capturam a essência da velocidade e do luxo, garantindo que cada olhar na estrada seja um momento de admiração.
+        </p>
+
+      </div>
+    </section>
+
+    <section class="sectionRevuelto3">
 
         <div class="videoRevuelto">
-            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/sitXeGjm4Mc?si=Wx79cjVU4YYX0qed" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/sitXeGjm4Mc?si=Wx79cjVU4YYX0qedautoplay=1" frameborder="0" allowfullscreen></iframe>
         </div>
 
     </section>
     <footer>
-        <div class="adm"><span style="color: rgb(184, 165, 0);">Desenvolvido por:</span> Evellyn</div>
+        <div class="adm"><span style="color:#E1AB32;">Desenvolvido por:</span> Evellyn</div>
 
-        <div class="redesSociais">redes socias</div>
+        <div class="redesSociais">
+          <img src="instabranco.png" class="insta">
+          <img src="twitterbranco.png" class="twitter">
+          <img src="facebranco.png" class="face">
+        </div>
 
     </footer>
 
