--- a/home.html
+++ b/home.html
@@ -7,8 +7,8 @@
     
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
-    <link rel = "stylesheet" href = "styleGeral.css">
-    <link rel = "stylesheet" href = "styleHome.css">
+    <link rel = "stylesheet" href = "./stylePages/styleGeral.css">
+    <link rel = "stylesheet" href = "./stylePages/styleHome.css">
     
 </head>
 <body class="bodyHome">
@@ -21,7 +21,7 @@
         </div>
 
         <div class="logoMenuImg">
-          <img src="tourologoevy.png" class="imgTouro">
+          <img src="./imgGeral/tourologoevy.png" class="imgTouro">
         </div>
 
         <div class="listaMenu2">
@@ -53,21 +53,21 @@
 
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="REVUELTO.png" class="d-block imgCarrossel" style="width: 100%;" alt="...">
+                    <img src="./imgHome/REVUELTO.png" class="d-block imgCarrossel" style="width: 100%;" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                       <a href="submenuREVUELTO.html"><button type="button" class="btn btn-light botaoSlide">Saiba Mais</button></a>
                     </div>
                   </div>
 
                   <div class="carousel-item">
-                    <img src="AVENTADOR.png" class="d-block imgCarrossel" style="width: 100%;" alt="...">
+                    <img src="./imgHome/AVENTADOR.png" class="d-block imgCarrossel" style="width: 100%;" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                       <a href="submenuAVENTADOR.html"><button type="button" class="btn btn-light botaoSlide">Saiba Mais</button></a>
                     </div>
                   </div>
 
                   <div class="carousel-item">
-                    <img src="HURACAN.png" class="d-block imgCarrossel"style="width: 100%; alt="...">
+                    <img src="./imgHome/HURACAN.png" class="d-block imgCarrossel"style="width: 100%; alt="...">
                     <div class="carousel-caption d-none d-md-block">
                       <a href="submenuHURACAN.html"><button type="button" class="btn btn-light botaoSlide">Saiba Mais</button></a>
                     </div>
@@ -112,9 +112,9 @@
         <div class="adm"><span style="color: #E1AB32; ">Desenvolvido por:</span> Evellyn</div>
 
         <div class="redesSociais">
-          <img src="instabranco.png" class="insta">
-          <img src="twitterbranco.png" class="twitter">
-          <img src="facebranco.png" class="face">
+          <img src="./imgGeral/instabranco.png" class="insta">
+          <img src="./imgGeral/twitterbranco.png" class="twitter">
+          <img src="./imgGeral/facebranco.png" class="face">
         </div>
 
     </footer>
