--- a/sobreNos.html
+++ b/sobreNos.html
@@ -7,8 +7,8 @@
     
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
-    <link rel = "stylesheet" href = "styleGeral.css">
-    <link rel = "stylesheet" href = "styleSobre.css">
+    <link rel = "stylesheet" href = "./stylePages/styleGeral.css">
+    <link rel = "stylesheet" href = "./stylePages/styleSobre.css">
 </head>
 <body class="bodySobreNos">
     <header>
@@ -20,7 +20,7 @@
         </div>
 
         <div class="logoMenuImg">
-            <img src="tourologoevy.png" class="imgTouro">
+            <img src="./imgGeral/tourologoevy.png" class="imgTouro">
         </div>
 
         <div class="listaMenu2">
@@ -60,9 +60,9 @@
         <div class="adm"><span style="color:#E1AB32;">Desenvolvido por:</span> Evellyn</div>
 
         <div class="redesSociais">
-            <img src="instabranco.png" class="insta">
-          <img src="twitterbranco.png" class="twitter">
-          <img src="facebranco.png" class="face">
+            <img src="./imgGeral/instabranco.png" class="insta">
+          <img src="./imgGeral/twitterbranco.png" class="twitter">
+          <img src="./imgGeral/facebranco.png" class="face">
         </div>
 
     </footer>
